# config-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: main.c
include/: config_monitor.h
src/: config_monitor.c
